finish pass thread control

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: "The Ultimate platform to develop intelligent chatbot"
 description: "Further description of chatbotman"
 author: Chatbotman Ltd
 language: en
-timezone: UTC+8
+timezone: Asia/Hong_Kong
 
 url: https://docs.chatbotman.com
 root: /
