--- a/source/_data/sidebar.yml
+++ b/source/_data/sidebar.yml
@@ -17,6 +17,7 @@ docs:
     deployment: deployment.html
   advance_usage:
     handover: handover.html
+    trigger_event: trigger_event.html
 
   customization:
     permalinks: permalinks.html
