--- a/source/_data/sidebar.yml
+++ b/source/_data/sidebar.yml
@@ -2,9 +2,9 @@ index:
   getting_started:
     overview: index.html
     setup: setup.html
-    configuration: configuration.html
-    commands: commands.html
-    migration: migration.html
+    privateReply: privateReply.html
+    # commands: commands.html
+    # migration: migration.html
   basic_usage:
     writing: writing.html
     front_matter: front-matter.html
