--- a/source/_data/sidebar.yml
+++ b/source/_data/sidebar.yml
@@ -4,6 +4,7 @@ index:
     setup: setup.html
     privateReply: privateReply.html
     customers: customers.html
+    campaigns: campaigns.html
     # commands: commands.html
     # migration: migration.html
   # basic_usage:
