--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "chatbotman-docs",
+  "version": "0.0.1",
   "private": true,
   "hexo": {
     "version": "3.5.0"
@@ -9,7 +9,7 @@
     "start": "hexo server",
     "build": "hexo generate && gulp",
     "eslint": "eslint .",
-    "deploy": "hexo deploy -g"
+    "deploy": "hexo generate && gulp && hexo deploy -g && rm -Rf ./public"
   },
   "dependencies": {
     "cheerio": "^0.20.0",
